--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         {{ object.title }}
-        {% for lesson in object.lesson %}
-            <a href="{{ lesson.get_absolute_url }}">{{ lesson.title }}</a>
+        {% for lesson in object.lessons %}
+            <li><a href="{{ lesson.get_absolute_url }}">{{ lesson.title }}</a></li>
         {% endfor %}
     </body>
 </html>
