--- a/courses/templates/courses/lesson_detail.html
+++ b/courses/templates/courses/lesson_detail.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
+{% extends 'courses/base.html' %}
+
+{% block content %}
         <h1>Lesson Detail View</h1>
         {% if object is not None %}
             {{ object.title }}
@@ -11,5 +8,4 @@
         {% else %}
             <h3>Upgrade membership</h3>
         {% endif %}
-    </body>
-</html>
+{% endblock %}
